--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,4 +36,4 @@ jobs:
         run: mix clean && mix compile --warnings-as-errors
 
       - name: ▶️ Run tests
-        run: mix coveralls.github
+        run: mix test
