Add asdf and update deps, along with extra coveralls config for running mix coveralls.

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@ erl_crash.dump
 # Ignore package tarball (built via "mix hex.build").
 lti_1p3-*.tar
 
+# vscode settings / tasks
+.vscode
 
 # Temporary files for e.g. tests
 /tmp
