--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,10 +1,9 @@
-name: Build & Test
+name: Publish
 
 on:
   push:
-    branches:
-      - master
-  pull_request:
+    tags:
+      - "*"
     branches:
       - master
 
