--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,7 +37,7 @@ jobs:
       - name: ▶️ Run tests
         run: mix test
 
-      - name: Publish to Hex.pm
-        uses: erlangpack/github-action@v1
+      - name: 🚀 Publish package to hex.pm
+        uses: wesleimp/action-publish-hex@v1
         env:
           HEX_API_KEY: ${{ secrets.HEX_API_KEY }}
