--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,17 +3,12 @@ name: Publish
 on:
   push:
     tags:
-      - "*"
-    branches:
-      - master
+      - "v[0-9]+.[0-9]+.[0-9]+" # production release tags vX.Y.Z
+      - "v[0-9]+.[0-9]+.[0-9]+-rc[0-9]+" # release candidate tags vX.Y.Z-rc1
 
 jobs:
   publish:
     runs-on: ubuntu-latest
-
-    env:
-      MIX_ENV: test
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
       - name: 🛎️ Checkout
@@ -31,12 +26,6 @@ jobs:
       - name: 🔨 Build dependencies
         run: mix deps.compile
 
-      - name: 🔨 Build project
-        run: mix clean && mix compile --warnings-as-errors
-
-      - name: ▶️ Run tests
-        run: mix test
-
       - name: 🚀 Publish package to hex.pm
         env:
           HEX_API_KEY: ${{ secrets.HEX_API_KEY }}
@@ -44,15 +33,6 @@ jobs:
           if [[ -z "${HEX_API_KEY}" ]]; then
             echo "HEX_API_KEY is not set" && exit 1
           fi
-
-          echo "===> install hex"
-          echo 
-          mix local.hex --force
-          mix local.rebar --force
-
-          echo "===> install dependencies"
-          echo 
-          mix do deps.get, deps.compile
 
           echo "===> Build hex package"
           echo 
